Keep main under class 'pdoc' as MathJax module relies on it

--- a/docs/module.html.jinja2
+++ b/docs/module.html.jinja2
@@ -218,7 +218,7 @@ SOFTWARE.
         </div>
         <div class="sidebar-toggle" id="sidebar-toggle"></div>
     </nav>
-    <main>
+    <main class="pdoc">
         <a href="#" class="back-to-top" id="back-to-top">
             {% include "assets/up.svg" %}
             <span>Back to top</span>
